# inkblots

./: .gitignore  FILE_ID.DIZ  LICENSE  README.md  convert.py  dosbox.conf  inkblots.asm  main.py  midi.py  pyproject.toml  tracker.py  unnamed.asm  widgets.py
tracker/: autosave.json  main.py  midi.py  pyproject.toml  tracker.py  widgets.py
